--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "crud-node-js",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./node_modules/nodemon/bin/nodemon.js ./src/app.js"
+    "start": "node ./src/app.js",
+    "start dev": "node ./node_modules/nodemon/bin/nodemon.js ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,15 @@
   "homepage": "https://github.com/jasonKristanto/crud-node-js#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
-    "nodemon": "^2.0.7",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
